# recway

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  package.nix  recway.desktop
.github/workflows/: ci.yml  publish-aur.yml  release.yml
src/: main.rs  theme.rs
src/config/: mod.rs
src/recorder/: implementation.rs  mod.rs
src/ui/: window.rs
