[package]
name = "wf-recorder-gui"
version = "0.2.0"
edition = "2021"
description = "A modern, minimal GUI for wf-recorder"
authors = ["Cline"]

[dependencies]
gtk = { version = "0.7", package = "gtk4", features = ["v4_8"] }
gio = "0.18.2"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "4.4"
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
