[package]
name = "wf-recorder-gui"
version = "1.0.0"
edition = "2024"
description = "A modern, minimal GUI for wf-recorder"
authors = ["Nabiko02"]

[profile.release]
strip = true

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "8"
anyhow = "1.0"
dirs = "6"
chrono = "0.4"
rfd = "0.17"
